
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0007 NEW)

PROJECT(time C)
SET(time_VERSION_MAJOR 1)
SET(time_VERSION_MINOR 0)
SET(time_VERSION_PATCH 0)
SET(time_VERSION_TWEAK 0)

SET(TMP_PROJECT_DESCRIPTION "Time manipulation functions for embedded systems"
        CACHE STRING "Project Description")

SET(CMAKE_INSTALL_PREFIX ${PLATFORM_PACKAGES_PATH})
SET(PUBLIC_INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

FIND_PACKAGE("ucdm" REQUIRED)

FILE(GLOB SOURCES *.c)
FILE(GLOB_RECURSE HEADERS *.h)
ADD_PLATFORM_LIBRARY(time STATIC "ucdm" ${SOURCES})
INSTALL_PLATFORM_LIBRARY(time ${HEADERS})
